# mpl-point-clicker

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: API.rst  Contributing.rst  Makefile  conf.py  index.rst
docs/_static/images/: front-page.apng
docs/autoapi/: mpl_point_clicker._clicker.clicker.rst
docs/examples/: callbacks.py  example.ipynb  example.py.md5  example.rst  example_codeobj.pickle  index.rst  sg_execution_times.rst
examples/: _example-playback.json  _gen_playback.py  _playback.py  callbacks.py  example.py
mpl_point_clicker/: __init__.py  _clicker.py  _version.py
