[metadata]
name=mpl_point_clicker
author=Ian Hunt-Isaak
author_email=ianhuntisaak@gmail.com
url = https://github.com/ianhi/mpl-point-clicker
license=BSD 3-Clause
packages = find:
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    matplotlib
    numpy

classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Matplotlib

[options.extras_require]
test =
    black
    pytest
    pytest-mpl
doc =
    sphinx
    numpydoc
    sphinx_rtd_theme
    sphinx-copybutton
    sphinx-autobuild
    sphinx_gallery>=0.8.2
    autoapi
dev =
    %(test)s
    %(doc)s
