[metadata]
name = mpl_point_clicker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianhi/mpl-point-clicker
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:
install_requires =
    --future--
    matplotlib
    numpy
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Matplotlib
keywords =
    Matplotlib

[options.extras_require]
doc =
    autoapi
    furo
    numpydoc
    sphinx
    sphinx-autobuild
    sphinx-copybutton
    sphinx-gallery>=0.8.2
test =
    black
    mpl-playback
    pytest
    pytest-mpl

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
extend-ignore =
    E203, E501
